[package]

name = "discrete"
version = "0.5.0"
authors = ["bvssvni <bvssvni@gmail.com>"]
keywords = ["mathematics", "combinatorics", "phantom-types"]
description = "Combinatorial phantom types for discrete mathematics"
license = "MIT"
readme = "README.md"
repository = "https://github.com/advancedresearch/discrete.git"
homepage = "https://github.com/advancedresearch/discrete"
exclude = ["assets/*"]
edition = "2024"

[lib]

name = "discrete"
path = "src/lib.rs"

[dependencies]
num-bigint = "0.4.6"

[dependencies.num-traits]
version = "0.2.19"
default-features = false

[dependencies.num-integer]
version = "0.1.46"
default-features = false

